--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,8 @@
       width: 100%;
       margin: 3em auto 0 auto;
       border-radius: 16px;
-      box-shadow: 0 4px 28px rgba(40, 60, 90, 0.13), 0 1.5px 3.5px rgba(39, 59, 86, 0.07);
+      box-shadow: 0 4px 28px rgba(40, 60, 90, 0.13),
+        0 1.5px 3.5px rgba(39, 59, 86, 0.07);
       padding: 3em 3em 2.3em 3em;
     }
     .projects-title {
@@ -72,6 +73,38 @@
         padding: 1.2em 0.6em 2em 0.6em;
       }
     }
+    /* Highlight for active page */
+    header nav ul li a.active {
+      color: #58a4ff;
+      border-bottom: 2px solid #58a4ff;
+      font-weight: 700;
+    }
+    header nav {
+      background: #273b56;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(39, 59, 86, 0.03);
+    }
+    header nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: inline-flex;
+    }
+    header nav ul li {
+      margin: 0 1.5em;
+    }
+    header nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 1.3em 0;
+      display: block;
+      transition: color 0.2s;
+    }
+    header nav ul li a:hover {
+      color: #58a4ff;
+      border-bottom: 2px solid #58a4ff;
+    }
   </style>
 </head>
 <body>
@@ -80,7 +113,7 @@
       <ul>
         <li><a href="index.html">Introduction</a></li>
         <li><a href="experience.html">Experience</a></li>
-        <li><a href="projects.html">Professional Projects</a></li>
+        <li><a href="projects.html" class="active">Professional Projects</a></li>
         <li><a href="knowledge.html">Knowledge Roadmap</a></li>
         <li><a href="certificates.html">Certificates & Workshops</a></li>
       </ul>
