--- a/knowledge.html
+++ b/knowledge.html
@@ -6,15 +6,20 @@
   <title>Dhruv Joshi | Knowledge Roadmap</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    body {background: #eef3fa;}
+    body {
+      background: #eef3fa;
+    }
     .timeline-container {
       max-width: 950px;
       margin: 3em auto 2em auto;
       padding: 0 16px;
     }
     .timeline-title {
-      font-size:2em; font-weight:700; color:#153260; 
-      text-align:center; margin-bottom:2.1em;
+      font-size: 2em;
+      font-weight: 700;
+      color: #153260;
+      text-align: center;
+      margin-bottom: 2.1em;
     }
     .timeline {
       position: relative;
@@ -41,12 +46,16 @@
       position: relative;
       width: 100%;
     }
-    .milestone.left {justify-content:flex-end;}
-    .milestone.right {justify-content:flex-start;}
+    .milestone.left {
+      justify-content: flex-end;
+    }
+    .milestone.right {
+      justify-content: flex-start;
+    }
     .milestone-content {
       background: #fff;
       border-radius: 13px;
-      box-shadow: 0 6px 24px rgba(44,64,108,0.09);
+      box-shadow: 0 6px 24px rgba(44, 64, 108, 0.09);
       padding: 1.4em 2em;
       width: 410px;
       margin: 0 32px;
@@ -54,23 +63,26 @@
       z-index: 1;
       border-left: 5px solid #4e77d4;
     }
-    .milestone.right .milestone-content { border-left: none; border-right: 5px solid #75c5e9; }
+    .milestone.right .milestone-content {
+      border-left: none;
+      border-right: 5px solid #75c5e9;
+    }
     .milestone-year {
       font-size: 1.23em;
-      font-weight:700;
+      font-weight: 700;
       color: #3061a6;
       margin-bottom: 0.7em;
       letter-spacing: 1.2px;
     }
     .milestone-title {
-      font-size:1.12em;
-      font-weight:600;
+      font-size: 1.12em;
+      font-weight: 600;
       color: #23345d;
-      margin-bottom:0.4em;
+      margin-bottom: 0.4em;
     }
     .milestone-desc {
-      font-size:1.03em;
-      color:#333;
+      font-size: 1.03em;
+      color: #333;
       margin-bottom: 0.2em;
       line-height: 1.67;
     }
@@ -78,20 +90,66 @@
       border-left: 5px dashed #1fa566;
       border-right: none;
       background: #f7fff9;
-      box-shadow: 0 5px 18px rgba(39,176,113,0.07);
+      box-shadow: 0 5px 18px rgba(39, 176, 113, 0.07);
     }
     .milestone.future .milestone-year {
       color: #1fa566;
     }
-    .milestone.future .milestone-title { color: #138057; }
-    @media (max-width:950px) {
-      .timeline-container, .timeline {width: 100%;}
+    .milestone.future .milestone-title {
+      color: #138057;
     }
-    @media (max-width:750px) {
-      .milestone-content {width: 90%;}
-      .timeline::before {left: 6px;transform:none;}
-      .milestone {flex-direction: column;}
-      .milestone-content {margin:1em 0;}
+    @media (max-width: 950px) {
+      .timeline-container,
+      .timeline {
+        width: 100%;
+      }
+    }
+    @media (max-width: 750px) {
+      .milestone-content {
+        width: 90%;
+      }
+      .timeline::before {
+        left: 6px;
+        transform: none;
+      }
+      .milestone {
+        flex-direction: column;
+      }
+      .milestone-content {
+        margin: 1em 0;
+      }
+    }
+    /* Highlight for active page */
+    header nav ul li a.active {
+      color: #58a4ff;
+      border-bottom: 2px solid #58a4ff;
+      font-weight: 700;
+    }
+    header nav {
+      background: #273b56;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(39, 59, 86, 0.03);
+    }
+    header nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: inline-flex;
+    }
+    header nav ul li {
+      margin: 0 1.5em;
+    }
+    header nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 1.3em 0;
+      display: block;
+      transition: color 0.2s;
+    }
+    header nav ul li a:hover {
+      color: #58a4ff;
+      border-bottom: 2px solid #58a4ff;
     }
   </style>
 </head>
@@ -102,7 +160,7 @@
         <li><a href="index.html">Introduction</a></li>
         <li><a href="experience.html">Experience</a></li>
         <li><a href="projects.html">Professional Projects</a></li>
-        <li><a href="knowledge.html">Knowledge Roadmap</a></li>
+        <li><a href="knowledge.html" class="active">Knowledge Roadmap</a></li>
         <li><a href="certificates.html">Certificates & Workshops</a></li>
       </ul>
     </nav>
